# OSINT-Marine

./: .env.example  .gitignore  Makefile  README.md  bi_to_ppt.html  bullet_placeholder_test.pptx  bullet_test.pptx  ebook-defense-cognitive_v1.0_2026-02-08.html  ebook-ia-biais-cognitifs.html  ebook_v2_definitif.md  generate_article_biais_llm.py  generate_ebook.py  generate_ebook_defense_cognitive.py  generate_plan_adoption_ppt.py  plan_adoption_ia.pptx  rapport_ia_marine.py  todo_pro_local.py  v3.6.2.1.html
backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0001_initial.py.bak  0002_ingestion_jobs.py
backend/app/: main.py
backend/app/api/: chat.py  conversations.py  files.py  router.py  settings.py
backend/app/core/: config.py  dependencies.py  logging.py  migrations.py
backend/app/domain/: models.py  schemas.py
backend/app/providers/: anthropic_provider.py  base.py  factory.py
backend/app/services/: chat_orchestrator.py  context_manager.py  embeddings.py  ingestion_queue.py  prompt_builder.py  rag_service.py  routing_policy.py  tool_service.py
backend/app/storage/: base.py  local_storage.py
backend/app/tools/: get_conversation_summary.py  (+3 more)
backend/scripts/: validate_rag_nominal.py
backend/tests/: conftest.py  test_api_smoke.py  test_api_token.py  test_context_manager.py  test_files_api_integration.py  test_ingestion_queue.py  test_prompt_builder.py  test_provider_normalization.py  test_rag_service.py  test_routing_policy.py  test_streaming_smoke.py  test_tool_loop.py
(+59 files in other folders)
