[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local-claude-assistant-backend"
version = "0.1.0"
description = "Production-minded local-first assistant backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116.0",
  "uvicorn[standard]>=0.31.0",
  "sqlalchemy>=2.0.36",
  "psycopg[binary]>=3.2.3",
  "alembic>=1.14.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
  "anthropic>=0.42.0",
  "redis>=5.2.0",
  "python-multipart>=0.0.17",
  "pgvector>=0.3.6",
  "numpy>=2.1.3",
  "sentence-transformers>=3.4.1",
  "pypdf>=5.1.0",
  "Pillow>=11.0.0",
  "pytesseract>=0.3.13",
  "pdf2image>=1.17.0",
  "httpx>=0.28.1",
  "orjson>=3.10.12",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.3",
  "pytest-asyncio>=0.24.0",
  "pytest-cov>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
